Utilities/otbliblas/include/liblas/capi/liblas.h

typedef struct LASPointHS *LASPointH;
typedef struct LASHeaderHS *LASHeaderH;
typedef struct LASGuidHS *LASGuidH;
/**
 * \todo to be documented
 */
typedef enum
{
    LE_None = 0,
    LE_Debug = 1,
    LE_Warning = 2,
    LE_Failure = 3,
    LE_Fatal = 4
} LASError;
/** Returns the intensity value for the point.  This value is the pulse return 
 *  magnitude, it is optional, and it is LiDAR system specific.
 *  @return the intensity value for the point.
*/
LAS_DLL uint16_t LASPoint_GetIntensity(const LASPointH hPoint);
/** Sets the intensity value for the point.
 *  @param hPoint the opaque pointer to the LASPointH instance
 *  @param value the value to set the intensity to
 *  @return an error number if an error occured.
*/
LAS_DLL LASError LASPoint_SetIntensity(LASPointH hPoint, uint16_t value);
/** Returns the return number for the point.  The return number is "the pulse
 *  return number for a given output pulse."  The first return number starts with
 *  the value 1.
 *  @param hPoint LASPointH instance
 *  @return a return number, valid from 1-6, for the point.  Use the LASError 
 *  methods to determine if an error occurred during this operation if 0 
 *  is returned.
*/
LAS_DLL uint16_t LASPoint_GetReturnNumber(const LASPointH hPoint);
/** Sets the return number for the point.  Valid values are from 1-6.
 *  @param hPoint LASPointH instance
 *  @param value the value to set for the return number
 *  @return LASError value determine success or failure.
*/
LAS_DLL LASError LASPoint_SetReturnNumber(LASPointH hPoint, uint16_t value);
/** Returns the total number of returns for a given pulse.
 *  @param hPoint LASPointH instance
 *  @return total number of returns for this pulse.
*/
LAS_DLL uint16_t LASPoint_GetNumberOfReturns(const LASPointH hPoint);
/** Sets the number of returns for the point.  Valid values are from 1-5.
 *  @param hPoint LASPointH instance
 *  @param value the value to set for the number of returns
 *  @return LASError value determine success or failure.
*/
LAS_DLL LASError LASPoint_SetNumberOfReturns(LASPointH hPoint, uint16_t value);
/** Returns the scan direction for a given pulse.
 *  @param hPoint LASPointH instance
 *  @return the scan direction for a given pulse.
*/
LAS_DLL uint16_t LASPoint_GetScanDirection(const LASPointH hPoint);
/** Sets the scan direction for a given pulse.  Valid values are 0 or 1, with 
 *  1 being a positive scan direction and 0 being a negative scan direction.
 *  @param hPoint LASPointH instance
 *  @param value the value to set for scan direction
 *  @return LASError value determine success or failure.
*/
LAS_DLL LASError LASPoint_SetScanDirection(LASPointH hPoint, uint16_t value);
/** Returns whether or not a given pulse is an edge point
 *  @param hPoint LASPointH instance
 *  @return whether or not a given pulse is an edge point.
*/
LAS_DLL uint16_t LASPoint_GetFlightLineEdge(const LASPointH hPoint);
/** Sets the edge marker for a given pulse.  Valid values are 0 or 1, with 
 *  1 being an edge point and 0 being interior.
 *  @param hPoint LASPointH instance
 *  @param value the value to set for flightline edge
 *  @return LASError value determine success or failure.
*/
LAS_DLL LASError LASPoint_SetFlightLineEdge(LASPointH hPoint, uint16_t value);
/** Returns all of the scan flags for the point -- Return number, number of 
 *  returns, flightline edge, scan direction, and scan angle rank.
 *  @param hPoint LASPointH instance
 *  @return all of the scan flags for the point
*/
LAS_DLL uint8_t LASPoint_GetScanFlags(const LASPointH hPoint);
/** Sets all of the scan flags for the point.  No validation is done. 
 *  @param hPoint LASPointH instance
 *  @param value the value to set for the flags
 *  @return LASError value determine success or failure.
*/
LAS_DLL LASError LASPoint_SetScanFlags(LASPointH hPoint, uint8_t value);
/** Returns the classification for the point
 *  @param hPoint LASPointH instance
 *  @return the classification for the point
*/
LAS_DLL uint8_t LASPoint_GetClassification(const LASPointH hPoint);
/** Sets the classification for the point.  No validation is done. 
 *  @param hPoint LASPointH instance
 *  @param value the value to set for the classification
 *  @return LASError value determine success or failure.
*/
LAS_DLL LASError LASPoint_SetClassification(LASPointH hPoint, uint8_t value);
/** Returns the time for the point
 *  @param hPoint LASPointH instance
 *  @return the time for the point
*/
LAS_DLL double LASPoint_GetTime(const LASPointH hPoint);
/** Sets the time for the point.  No validation is done. 
 *  @param hPoint LASPointH instance
 *  @param value the value to set for the time
 *  @return LASError value determine success or failure.
*/
LAS_DLL LASError LASPoint_SetTime(LASPointH hPoint, double value);
/** Returns the scan angle for the point
 *  @param hPoint LASPointH instance
 *  @return the scan angle for the point
*/
LAS_DLL int8_t LASPoint_GetScanAngleRank(const LASPointH hPoint);
/** Sets the scan angle for the point.  No validation is done. 
 *  @param hPoint LASPointH instance
 *  @param value the value to set for the scan angle
 *  @return LASError value determine success or failure.
*/
LAS_DLL LASError LASPoint_SetScanAngleRank(LASPointH hPoint, int8_t value);
/** Returns the arbitrary user data for the point
 *  @param hPoint LASPointH instance
 *  @return the arbitrary user data for the point
*/
LAS_DLL uint8_t LASPoint_GetUserData(const LASPointH hPoint);
/** Sets the arbitrary user data for the point.  No validation is done. 
 *  @param hPoint LASPointH instance
 *  @param value the value to set for the arbitrary user data
 *  @return LASError value determine success or failure.
*/
LAS_DLL LASError LASPoint_SetUserData(LASPointH hPoint, uint8_t value);
/** Returns a bitfield representing the validity of various members
 *  enum DataMemberFlag
 {
     eReturnNumber = 1,
     eNumberOfReturns = 2,
     eScanDirection = 4,
     eFlightLineEdge = 8,
     eClassification = 16,
     eScanAngleRank = 32,
     eTime = 64
 };
 *  @param hPoint LASPointH instance
 *  @return bitfield representing the validity of various members.
*/
LAS_DLL int LASPoint_Validate(LASPointH hPoint);
/** Returns a boolean whether or not the point is valid
 *  @param hPoint LASPointH instance
 *  @return a boolean (1 or 0) whether or not the point is valid.
*/
LAS_DLL int LASPoint_IsValid(LASPointH hPoint);
/** Creates a new empty LASPointH instance 
 *  @return LASPointH instance.  If the value is NULL use the 
 *  LASError_GetLastError* methods to determine the problem
*/
LAS_DLL LASPointH LASPoint_Create(void);
/** Creates a copy of a LASPointH instance
 *  @param hPoint the LASPointH instance to copy 
 *  @return new LASPointH instance.  If the value is NULL use the 
 *  LASError_GetLastError* methods to determine the problem
*/
LAS_DLL LASPointH LASPoint_Copy(const LASPointH);
/** Destroys/deletes a LASPointH instance
*/
LAS_DLL void LASPoint_Destroy(LASPointH hPoint);
/****************************************************************************/
/* Header operations                                                        */
/****************************************************************************/

/** Copies a LASHeaderH instance
 *  @param hHeader the LASHeaderH to copy
 *  @return a LASHeaderH instance or NULL on error
*/
LAS_DLL LASHeaderH LASHeader_Copy(const LASHeaderH hHeader);
/** Creates an empty LASHeaderH with default values
*/
LAS_DLL LASHeaderH LASHeader_Create(void);
/** Destroys/deletes a LASHeader instance
*/
LAS_DLL void LASHeader_Destroy(LASHeaderH hHeader);
/** Returns the file signature the the file.  This should always be 'LASF'
 *  @param hHeader LASHeaderH instance
 *  @return the file signature the the file.  This should always be 'LASF'
*/
LAS_DLL char *LASHeader_GetFileSignature(const LASHeaderH hHeader);
/** Returns the file source id for the file.  It is a number from 1-65535
 *  @param hHeader LASHeaderH instance
 *  @return the file source id for the file.
*/
LAS_DLL uint16_t LASHeader_GetFileSourceId(const LASHeaderH hHeader);
/** Sets the FileSource ID value for the header.  By default, this value is "0" if it 
 *  is not explicitly set.  See the LAS specification for details on what this
 *  value should logically be set to.
 *  @param hHeader LASHeaderH instance
 *  @param value the value to set as the FileSource ID value for the header
 *  @return LASError enum
*/
LAS_DLL LASError LASHeader_SetFileSourceId(LASHeaderH hHeader, uint16_t value);
/** Returns the project id for the header as a GUID string
 *  @return the project id for the header as a GUID string
*/
LAS_DLL char *LASHeader_GetProjectId(const LASHeaderH hHeader);
/** Sets the project id/GUID for the header
 *  @param hHeader LASHeaderH instance
 *  @param hId LASGuidH instance to set the GUID for the header to
 *  @return LASError enum
*/
LAS_DLL LASError LASHeader_SetGUID(LASHeaderH hHeader, LASGuidH hId);
/** Returns the major version number for the header.  This value is expected 
 *  to always be 1.
 *  @param hHeader LASHeaderH instance
 *  @return major version number for the header.
*/
LAS_DLL uint8_t LASHeader_GetVersionMajor(const LASHeaderH hHeader);