Utilities/otbliblas/csharp/dotnetLibLAS/LibLASCAPI.cs


        /** Returns the intensity value for the point.  This value is the pulse return 
        *  magnitude, it is optional, and it is LiDAR system specific.
        *  @return the intensity value for the point.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern UInt16 LASPoint_GetIntensity(LASPointH hPoint);

        /** Sets the intensity value for the point.
        *  @param hPoint the opaque pointer to the LASPointH instance
        *  @param value the value to set the intensity to
        *  @return an error number if an error occured.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASPoint_SetIntensity(LASPointH hPoint, UInt16 value);

        /** Returns the return number for the point.  The return number is "the pulse
        *  return number for a given output pulse."  The first return number starts with
        *  the value 1.
        *  @param hPoint LASPointH instance
        *  @return a return number, valid from 1-6, for the point.  Use the LASError 
        *  methods to determine if an error occurred during this operation if 0 
        *  is returned.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern UInt16 LASPoint_GetReturnNumber(LASPointH hPoint);

        /** Sets the return number for the point.  Valid values are from 1-6.
        *  @param hPoint LASPointH instance
        *  @param value the value to set for the return number
        *  @return LASError value determine success or failure.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASPoint_SetReturnNumber(LASPointH hPoint, UInt16 value);

        /** Returns the total number of returns for a given pulse.
        *  @param hPoint LASPointH instance
        *  @return total number of returns for this pulse.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern UInt16 LASPoint_GetNumberOfReturns(LASPointH hPoint);

        /** Sets the number of returns for the point.  Valid values are from 1-5.
        *  @param hPoint LASPointH instance
        *  @param value the value to set for the number of returns
        *  @return LASError value determine success or failure.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASPoint_SetNumberOfReturns(LASPointH hPoint, UInt16 value);

        /** Returns the scan direction for a given pulse.
        *  @param hPoint LASPointH instance
        *  @return the scan direction for a given pulse.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern UInt16 LASPoint_GetScanDirection(LASPointH hPoint);

        /** Sets the scan direction for a given pulse.  Valid values are 0 or 1, with 
        *  1 being a positive scan direction and 0 being a negative scan direction.
        *  @param hPoint LASPointH instance
        *  @param value the value to set for scan direction
        *  @return LASError value determine success or failure.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASPoint_SetScanDirection(LASPointH hPoint, UInt16 value);

        /** Returns whether or not a given pulse is an edge point
        *  @param hPoint LASPointH instance
        *  @return whether or not a given pulse is an edge point.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern UInt16 LASPoint_GetFlightLineEdge(LASPointH hPoint);

        /** Sets the edge marker for a given pulse.  Valid values are 0 or 1, with 
        *  1 being an edge point and 0 being interior.
        *  @param hPoint LASPointH instance
        *  @param value the value to set for flightline edge
        *  @return LASError value determine success or failure.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASPoint_SetFlightLineEdge(LASPointH hPoint, UInt16 value);

        /** Returns all of the scan flags for the point -- Return number, number of 
        *  returns, flightline edge, scan direction, and scan angle rank.
        *  @param hPoint LASPointH instance
        *  @return all of the scan flags for the point
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern byte LASPoint_GetScanFlags(LASPointH hPoint);

        /** Sets all of the scan flags for the point.  No validation is done. 
        *  @param hPoint LASPointH instance
        *  @param value the value to set for the flags
        *  @return LASError value determine success or failure.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASPoint_SetScanFlags(LASPointH hPoint, byte value);

        /** Returns the classification for the point
        *  @param hPoint LASPointH instance
        *  @return the classification for the point
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern byte LASPoint_GetClassification(LASPointH hPoint);

        /** Sets the classification for the point.  No validation is done. 
        *  @param hPoint LASPointH instance
        *  @param value the value to set for the classification
        *  @return LASError value determine success or failure.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASPoint_SetClassification(LASPointH hPoint, byte value);

        /** Returns the time for the point
        *  @param hPoint LASPointH instance
        *  @return the time for the point
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern double LASPoint_GetTime(LASPointH hPoint);

        /** Sets the time for the point.  No validation is done. 
        *  @param hPoint LASPointH instance
        *  @param value the value to set for the time
        *  @return LASError value determine success or failure.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASPoint_SetTime(LASPointH hPoint, double value);

        /** Returns the scan angle for the point
        *  @param hPoint LASPointH instance
        *  @return the scan angle for the point
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern SByte LASPoint_GetScanAngleRank(LASPointH hPoint);

        /** Sets the scan angle for the point.  No validation is done. 
        *  @param hPoint LASPointH instance
        *  @param value the value to set for the scan angle
        *  @return LASError value determine success or failure.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASPoint_SetScanAngleRank(LASPointH hPoint, SByte value);

        /** Returns the arbitrary user data for the point
        *  @param hPoint LASPointH instance
        *  @return the arbitrary user data for the point
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern byte LASPoint_GetUserData(LASPointH hPoint);

        /** Sets the arbitrary user data for the point.  No validation is done. 
        *  @param hPoint LASPointH instance
        *  @param value the value to set for the arbitrary user data
        *  @return LASError value determine success or failure.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASPoint_SetUserData(LASPointH hPoint, byte value);

        /** Returns a bitfield representing the validity of various members
        *  enum DataMemberFlag
        {
        eReturnNumber = 1,
        eNumberOfReturns = 2,
        eScanDirection = 4,
        eFlightLineEdge = 8,
        eClassification = 16,
        eScanAngleRank = 32,
        eTime = 64
        };
        *  @param hPoint LASPointH instance
        *  @return bitfield representing the validity of various members.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern int LASPoint_Validate(LASPointH hPoint);

        /** Returns a boolean whether or not the point is valid
        *  @param hPoint LASPointH instance
        *  @return a boolean (1 or 0) whether or not the point is valid.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern int LASPoint_IsValid(LASPointH hPoint);

        /** Creates a new empty LASPointH instance 
        *  @return LASPointH instance.  If the value is NULL use the 
        *  LASError_GetLastError* methods to determine the problem
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASPointH LASPoint_Create();

        /** Creates a copy of a LASPointH instance
        *  @param hPoint the LASPointH instance to copy 
        *  @return new LASPointH instance.  If the value is NULL use the 
        *  LASError_GetLastError* methods to determine the problem
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASPointH LASPoint_Copy(LASPointH hPoint);

        /** Destroys/deletes a LASPointH instance
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern void LASPoint_Destroy(LASPointH hPoint);

        /****************************************************************************/
        /* Header operations                                                        */
        /****************************************************************************/

        /** Copies a LASHeaderH instance
        *  @param hHeader the LASHeaderH to copy
        *  @return a LASHeaderH instance or NULL on error
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASHeaderH LASHeader_Copy(LASHeaderH hHeader);

        /** Creates an empty LASHeaderH with default values
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASHeaderH LASHeader_Create();

        /** Destroys/deletes a LASHeader instance
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern void LASHeader_Destroy(LASHeaderH hHeader);

        /** Returns the file signature the the file.  This should always be 'LASF'
        *  @param hHeader LASHeaderH instance
        *  @return the file signature the the file.  This should always be 'LASF'
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern String LASHeader_GetFileSignature(LASHeaderH hHeader);

        /** Returns the file source id for the file.  It is a number from 1-65535
        *  @param hHeader LASHeaderH instance
        *  @return the file source id for the file.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern UInt16 LASHeader_GetFileSourceId(LASHeaderH hHeader);

        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASHeader_SetFileSourceId(LASHeaderH hHeader, UInt16 value);

        /** Returns the project id for the header as a GUID string
        *  @return the project id for the header as a GUID string
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern String LASHeader_GetProjectId(LASHeaderH hHeader);

        /** Sets the project id/GUID for the header
        *  @param hHeader LASHeaderH instance
        *  @param hId LASGuidH instance to set the GUID for the header to
        *  @return LASError enum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASHeader_SetGUID(LASHeaderH hHeader, LASGuidH hId);

        /** Returns the major version number for the header.  This value is expected 
        *  to always be 1.
        *  @param hHeader LASHeaderH instance
        *  @return major version number for the header.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern byte LASHeader_GetVersionMajor(LASHeaderH hHeader);
